adding train to commit to hopefully agree with changes done to main

--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "256e51d2",
+   "id": "d09b4c42",
    "metadata": {},
    "source": [
     "# Training Notebook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ff24f55",
+   "id": "f76a3db4",
    "metadata": {},
    "source": [
     "In this notebook, we will run models, also this notebook can be a template to run other models with different hyperparameters."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d7767e",
+   "id": "606af7ca",
    "metadata": {},
    "source": [
     "## Import libraries"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a880f08d",
+   "id": "fccfe284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bd4d49",
+   "id": "ff406e5e",
    "metadata": {},
    "source": [
     "## Load train and validation loaders"
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "523632e5",
+   "execution_count": 2,
+   "id": "dd484d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,8 @@
     "SHUFFLE = True\n",
     "\n",
     "# root of the name to save or load captions files\n",
-    "CAPTIONS_NAME = 'random'\n",
+    "CAPTIONS_NAME = 'sports'\n",
+    "SUPER_CATEGORIES = ['sports'] # should be list of eligible coco super categories, or None to include all images\n",
     "\n",
     "# for encoder and decoder\n",
     "EMBED_SIZE = 512  # dimension of vocab embedding vector\n",
@@ -75,16 +76,16 @@
     "NUM_LAYERS = 1  # hidden layers in LTSM\n",
     "\n",
     "# training parameters\n",
-    "TOTAL_EPOCH = 1\n",
-    "CHECKPOINT = '../model/model_v1'\n",
+    "TOTAL_EPOCH = 50\n",
+    "CHECKPOINT = '../model/model_sport_v1'\n",
     "\n",
-    "PRINT_EVERY = 500 # run print_every batches and then"
+    "PRINT_EVERY = 100 # run print_every batches and then"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0c74cc57-cc4a-4326-bb20-a99603dde422",
+   "execution_count": 3,
+   "id": "a247cc66",
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +94,9 @@
      "text": [
       "train dataset has 10000 images\n",
       " val dataset has 2000 images\n",
-      " test dataset has 2000 images\n",
-      "There are 50026 captions in the data set\n",
-      "With FREQ_THRESHOLD = 5, vocab size is 3389\n"
+      " test dataset has 938 images\n",
+      "There are 50028 captions in the data set\n",
+      "With FREQ_THRESHOLD = 5, vocab size is 2110\n"
      ]
     }
    ],
@@ -107,7 +108,7 @@
     "#     [save_name]_captions_val.json\n",
     "#     [save_name]_captions_test.json\n",
     "\n",
-    "prepare_datasets(train_percent = 0.87, super_categories=None,\n",
+    "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
     "                 max_train=10000, max_val=2000, max_test=2000,\n",
     "                 save_name=CAPTIONS_NAME, random_seed=42)\n",
     "\n",
@@ -121,17 +122,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c6149d22-1b1e-4225-b3af-eeb326e376fd",
-   "metadata": {},
-   "source": [
-    "These are data loaders built with the prepare_datasets method"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "503f98fa-8228-4a0e-b522-866f4052ab0a",
+   "execution_count": 4,
+   "id": "92d977f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5ae20f05-89b6-45f6-8e9c-b62753fe94f4",
+   "execution_count": 5,
+   "id": "2c4115c1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training dataloader: 50000, Length of testing dataloader: 188\n",
-      "Length of vocabulary: 3389\n"
+      "Length of training dataloader: 1563, Length of testing dataloader: 188\n",
+      "Length of vocabulary: 2110\n"
      ]
     }
    ],
@@ -184,23 +177,13 @@
     "\n",
     "val_loader, val_dataset = get_loader(**val_loader_params)\n",
     "\n",
-    "print(f\"Length of training dataloader: {len(train_dataset)}, Length of testing dataloader: {len(val_loader)}\")\n",
+    "print(f\"Length of training dataloader: {len(train_loader)}, Length of testing dataloader: {len(val_loader)}\")\n",
     "print(f\"Length of vocabulary: {len(train_dataset.vocab.idx2word)}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3099e5c-137d-4b0b-86c2-1be897ce95a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_dataset.img"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "cacb037c",
+   "id": "3cde1d50",
    "metadata": {},
    "source": [
     "## Load the model"
@@ -208,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a492102f",
+   "execution_count": 6,
+   "id": "593a54d6",
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e2b4ebad",
+   "execution_count": 7,
+   "id": "b038a405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "673155db",
+   "execution_count": 8,
+   "id": "d4fc7a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ed65aa52-7d2c-434e-b317-e3619bc82a97",
+   "execution_count": 9,
+   "id": "ceaa922c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45158cda",
+   "id": "cc8fd73a",
    "metadata": {},
    "source": [
     "## Training"
@@ -284,15 +267,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d2ab890",
+   "id": "19a62141",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0/1] || Step: [0/1563] || Average Training Loss: 8.1363\n",
-      "Epoch: [0/1] || Step: [500/1563] || Average Training Loss: 3.7902\n"
+      "Epoch: [0/50]          || Step: [0/1563]        || Average Training Loss: 7.6567\n",
+      "Epoch: [0/50]          || Step: [100/1563]      || Average Training Loss: 3.8458\n",
+      "Epoch: [0/50]          || Step: [200/1563]      || Average Training Loss: 3.4217\n",
+      "Epoch: [0/50]          || Step: [300/1563]      || Average Training Loss: 3.2068\n",
+      "Epoch: [0/50]          || Step: [400/1563]      || Average Training Loss: 3.0728\n",
+      "Epoch: [0/50]          || Step: [500/1563]      || Average Training Loss: 2.9856\n"
      ]
     }
    ],
@@ -316,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ec0a2c2-8bf7-4a91-9ebb-ffe9601c1ef4",
+   "id": "90bf9e0a",
    "metadata": {},
    "source": [
     "## Try with different hyperparamters"
@@ -325,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31c88d1-e10a-4b3b-a017-a28e227d509d",
+   "id": "906a057e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3017d8de",
+   "id": "01a5f807",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef67378d-6e62-4b7c-9557-ea91b2f06802",
+   "id": "4a086978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e18e938c-e9cc-47bd-9290-343304a18e7e",
+   "id": "e07a2af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03d3cbe-6ae1-4619-98ac-a3f15e3f7984",
+   "id": "296dccb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbaa16cd-fa96-4164-923f-8fedfc4c78d5",
+   "id": "9f176d10",
    "metadata": {},
    "outputs": [],
    "source": []
