--- a/code/train_sports.ipynb
+++ b/code/train_sports.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "d09b4c42",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Training Notebook"
    ]
@@ -80,9 +82,10 @@
     "NUM_LAYERS = 3  # hidden layers in LTSM\n",
     "\n",
     "# training parameters\n",
+    "PRINT_EVERY = 100\n",
     "TOTAL_EPOCH = 50\n",
     "CHECKPOINT = '../model/model_sport_v2' # there is no v1 for sports:\n",
-    "# v2 is consistent with previous tests as v2 para"
+    "# v2 is consistent with previous tests as v2 parameters are shared across data sets"
    ]
   },
   {
@@ -145,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training dataloader: 1563, Length of testing dataloader: 188\n",
+      "Length of training dataloader: 391, Length of testing dataloader: 47\n",
       "Length of vocabulary: 2110\n"
      ]
     }
@@ -276,11 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0/50]          || Step: [0/1563]        || Average Training Loss: 7.6567\n",
-      "Epoch: [0/50]          || Step: [100/1563]      || Average Training Loss: 3.8458\n",
-      "Epoch: [0/50]          || Step: [200/1563]      || Average Training Loss: 3.4217\n",
-      "Epoch: [0/50]          || Step: [300/1563]      || Average Training Loss: 3.2068\n",
-      "Epoch: [0/50]          || Step: [400/1563]      || Average Training Loss: 3.0728\n"
+      "Epoch: [0/50]          || Step: [0/391]         || Average Training Loss: 7.6513\n"
      ]
     }
    ],
@@ -301,130 +300,6 @@
     "\n",
     "training_loss, validation_loss = train(**train_params) "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90bf9e0a",
-   "metadata": {},
-   "source": [
-    "## Try with different hyperparamters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "906a057e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for data loader\n",
-    "BATCH_SIZE = 128\n",
-    "CAPS_PER_IMAGE = 5 # how many captions for each image to include in data set\n",
-    "\n",
-    "# for encoder and decoder\n",
-    "EMBED_SIZE = 1024 # dimension of vocab embedding vector\n",
-    "HIDDEN_SIZE = 512\n",
-    "NUM_LAYERS = 3 #hidden layers in LTSM\n",
-    "vocab_size = len(train_dataset.vocab.idx2word)\n",
-    "\n",
-    "# training parameters\n",
-    "TOTAL_EPOCH = 10\n",
-    "CHECKPOINT = '../model/model_v2'\n",
-    "PRINT_EVERY = 500 # run print_every batches and then"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "01a5f807",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m model_params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../model/model_v2/model_v2_1_param.json\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: BATCH_SIZE,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_size\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mlen\u001b[39m(train_dataset\u001b[38;5;241m.\u001b[39mvocab\u001b[38;5;241m.\u001b[39midx2word)\n\u001b[1;32m      8\u001b[0m }\n\u001b[0;32m---> 10\u001b[0m \u001b[43msave_params\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmodel_params\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/INM706-image-captioning/code/utils.py:248\u001b[0m, in \u001b[0;36msave_params\u001b[0;34m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size)\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_params\u001b[39m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size):\n\u001b[1;32m    241\u001b[0m     params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    242\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: batch_size,\n\u001b[1;32m    243\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124membed_size\u001b[39m\u001b[38;5;124m'\u001b[39m: embed_size,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_size\u001b[39m\u001b[38;5;124m'\u001b[39m: vocab_size\n\u001b[1;32m    247\u001b[0m     }\n\u001b[0;32m--> 248\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m outfile:\n\u001b[1;32m    249\u001b[0m         json\u001b[38;5;241m.\u001b[39mdump(params, outfile)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'"
-     ]
-    }
-   ],
-   "source": [
-    "model_params = {\n",
-    "    'path': CHECKPOINT,\n",
-    "    'batch_size': BATCH_SIZE,\n",
-    "    'embed_size': EMBED_SIZE,\n",
-    "    'hidden_size': HIDDEN_SIZE,\n",
-    "    'num_layers': NUM_LAYERS,\n",
-    "    'vocab_size': len(train_dataset.vocab.idx2word)\n",
-    "}\n",
-    "\n",
-    "save_params(**model_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a086978",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoder_ = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
-    "decoder_ = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e07a2af5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the loss is a cross entropy loss and ignore the index of <PAD> since it doesn't make any difference\n",
-    "criterion = nn.CrossEntropyLoss(ignore_index=train_dataset.vocab.word2idx[\"<PAD>\"]).cuda() if torch.cuda.is_available() else nn.CrossEntropyLoss(ignore_index=train_dataset.vocab.word2idx[\"<PAD>\"])\n",
-    "\n",
-    "# combine the parameters of decoder and encoder\n",
-    "params = list(decoder_.parameters()) + list(encoder_.embed.parameters())\n",
-    "\n",
-    "# Adam optimizer\n",
-    "opt_pars = {'lr':3e-4, 'weight_decay':1e-3, 'betas':(0.9, 0.999), 'eps':1e-08}\n",
-    "optimizer = optim.Adam(params, **opt_pars)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "296dccb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_params = {\n",
-    "    'encoder': encoder_,\n",
-    "    'decoder': decoder_,\n",
-    "    'criterion': criterion,\n",
-    "    'optimizer': optimizer,\n",
-    "    'train_loader': train_loader,\n",
-    "    'val_loader': val_loader,\n",
-    "    'total_epoch': TOTAL_EPOCH,\n",
-    "    'device': device,\n",
-    "    'checkpoint_path': CHECKPOINT,\n",
-    "    'print_every': PRINT_EVERY,\n",
-    "    'load_checkpoint': False\n",
-    "}\n",
-    "\n",
-    "training_loss, validation_loss = train(**train_params) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f176d10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
