typo fixes on utils.py

--- a/code/train_sports.ipynb
+++ b/code/train_sports.ipynb
@@ -98,11 +98,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train dataset has 10000 images\n",
-      " val dataset has 2000 images\n",
+      "train dataset has 200 images\n",
+      " val dataset has 200 images\n",
       " test dataset has 938 images\n",
-      "There are 50028 captions in the data set\n",
-      "With FREQ_THRESHOLD = 5, vocab size is 2110\n"
+      "There are 1000 captions in the data set\n",
+      "With FREQ_THRESHOLD = 5, vocab size is 269\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
     "#     [save_name]_captions_test.json\n",
     "\n",
     "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
-    "                 max_train=10000, max_val=2000, max_test=2000,\n",
+    "                 max_train=200, max_val=200, max_test=2000,\n",
     "                 save_name=CAPTIONS_NAME, random_seed=42)\n",
     "\n",
     "# we explicitly build the vocab here. We use frequency threshold, and we build\n",
@@ -148,8 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training dataloader: 391, Length of testing dataloader: 47\n",
-      "Length of vocabulary: 2110\n"
+      "Length of training dataloader: 8, Length of testing dataloader: 5\n",
+      "Length of vocabulary: 269\n"
      ]
     }
    ],
@@ -279,7 +279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0/50]          || Step: [0/391]         || Average Training Loss: 7.6513\n"
+      "Epoch: [0/50]          || Step: [0/8]           || Average Training Loss: 5.5987\n",
+      "Epoch: [0/50]          || Step: [0/5]           || Average Training Loss: 4.2425\n"
      ]
     }
    ],
@@ -300,6 +301,14 @@
     "\n",
     "training_loss, validation_loss = train(**train_params) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "901a3c91-2b07-4ac6-9b61-7bf85f1667b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
