fixed bleu, removed un needed lines from utils.py

--- a/code/train_sports.ipynb
+++ b/code/train_sports.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "19a62141",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,18 @@
       "Epoch: [23/25]         || Step: [100/391]       || Average Training Loss: 2.2958\n",
       "Epoch: [23/25]         || Step: [200/391]       || Average Training Loss: 2.2969\n",
       "Epoch: [23/25]         || Step: [300/391]       || Average Training Loss: 2.2957\n",
-      "Epoch: [23/25]         || Step: [0/47]          || Average Validation Loss: 2.3293\n"
+      "Epoch: [23/25]         || Step: [0/47]          || Average Validation Loss: 2.3293\n",
+      "****************************************************************************************************\n",
+      "Epoch: [23/25] || Training Loss = 2.30 || Validation Loss: 2.26 || Time: 15.978912\n",
+      "****************************************************************************************************\n",
+      "Epoch: [24/25]         || Step: [0/391]         || Average Training Loss: 2.3617\n",
+      "Epoch: [24/25]         || Step: [100/391]       || Average Training Loss: 2.2665\n",
+      "Epoch: [24/25]         || Step: [200/391]       || Average Training Loss: 2.2865\n",
+      "Epoch: [24/25]         || Step: [300/391]       || Average Training Loss: 2.2872\n",
+      "Epoch: [24/25]         || Step: [0/47]          || Average Validation Loss: 2.4269\n",
+      "****************************************************************************************************\n",
+      "Epoch: [24/25] || Training Loss = 2.30 || Validation Loss: 2.28 || Time: 16.649065\n",
+      "****************************************************************************************************\n"
      ]
     }
    ],
