saving changes before merging in main

--- a/code/eval_new.ipynb
+++ b/code/eval_new.ipynb
@@ -248,7 +248,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1, b2, b3, b4 = evaluate_bleu_score2(**evaluation_params)"
+    "b1, b2, b3, b4 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -522,7 +522,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1, b2, b3, b4 = evaluate_bleu_score2(**evaluation_params)"
+    "b1, b2, b3, b4 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -728,7 +728,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1, b2, b3, b4 = evaluate_bleu_score2(**evaluation_params)"
+    "b1, b2, b3, b4 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -933,7 +933,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1, b2, b3, b4 = evaluate_bleu_score2(**evaluation_params)"
+    "b1, b2, b3, b4 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -1136,7 +1136,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1, b2, b3, b4 = evaluate_bleu_score2(**evaluation_params)"
+    "b1, b2, b3, b4 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -1343,7 +1343,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1, b2, b3, b4 = evaluate_bleu_score2(**evaluation_params)"
+    "b1, b2, b3, b4 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
