--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "256e51d2",
+   "id": "d09b4c42",
    "metadata": {},
    "source": [
     "# Training Notebook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ff24f55",
+   "id": "f76a3db4",
    "metadata": {},
    "source": [
     "In this notebook, we will run models, also this notebook can be a template to run other models with different hyperparameters."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d7767e",
+   "id": "606af7ca",
    "metadata": {},
    "source": [
     "## Import libraries"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a880f08d",
+   "id": "fccfe284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bd4d49",
+   "id": "ff406e5e",
    "metadata": {},
    "source": [
     "## Load train and validation loaders"
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "523632e5",
+   "execution_count": 2,
+   "id": "dd484d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,8 @@
     "SHUFFLE = True\n",
     "\n",
     "# root of the name to save or load captions files\n",
-    "CAPTIONS_NAME = 'random'\n",
+    "CAPTIONS_NAME = 'sports'\n",
+    "SUPER_CATEGORIES = ['sports'] # should be list of eligible coco super categories, or None to include all images\n",
     "\n",
     "# for encoder and decoder\n",
     "EMBED_SIZE = 512  # dimension of vocab embedding vector\n",
@@ -75,16 +76,16 @@
     "NUM_LAYERS = 1  # hidden layers in LTSM\n",
     "\n",
     "# training parameters\n",
-    "TOTAL_EPOCH = 1\n",
-    "CHECKPOINT = '../model/model_v1'\n",
+    "TOTAL_EPOCH = 50\n",
+    "CHECKPOINT = '../model/model_sport_v1'\n",
     "\n",
-    "PRINT_EVERY = 500 # run print_every batches and then"
+    "PRINT_EVERY = 100 # run print_every batches and then"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0c74cc57-cc4a-4326-bb20-a99603dde422",
+   "execution_count": 3,
+   "id": "a247cc66",
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +94,9 @@
      "text": [
       "train dataset has 10000 images\n",
       " val dataset has 2000 images\n",
-      " test dataset has 2000 images\n",
-      "There are 50026 captions in the data set\n",
-      "With FREQ_THRESHOLD = 5, vocab size is 3389\n"
+      " test dataset has 938 images\n",
+      "There are 50028 captions in the data set\n",
+      "With FREQ_THRESHOLD = 5, vocab size is 2110\n"
      ]
     }
    ],
@@ -107,7 +108,7 @@
     "#     [save_name]_captions_val.json\n",
     "#     [save_name]_captions_test.json\n",
     "\n",
-    "prepare_datasets(train_percent = 0.87, super_categories=None,\n",
+    "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
     "                 max_train=10000, max_val=2000, max_test=2000,\n",
     "                 save_name=CAPTIONS_NAME, random_seed=42)\n",
     "\n",
@@ -121,17 +122,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c6149d22-1b1e-4225-b3af-eeb326e376fd",
-   "metadata": {},
-   "source": [
-    "These are data loaders built with the prepare_datasets method"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "503f98fa-8228-4a0e-b522-866f4052ab0a",
+   "execution_count": 4,
+   "id": "92d977f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5ae20f05-89b6-45f6-8e9c-b62753fe94f4",
+   "execution_count": 5,
+   "id": "2c4115c1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training dataloader: 50000, Length of testing dataloader: 188\n",
-      "Length of vocabulary: 3389\n"
+      "Length of training dataloader: 1563, Length of testing dataloader: 188\n",
+      "Length of vocabulary: 2110\n"
      ]
     }
    ],
@@ -190,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cacb037c",
+   "id": "3cde1d50",
    "metadata": {},
    "source": [
     "## Load the model"
@@ -198,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a492102f",
+   "execution_count": 6,
+   "id": "593a54d6",
    "metadata": {},
    "outputs": [
     {
@@ -217,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e2b4ebad",
+   "execution_count": 7,
+   "id": "b038a405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "673155db",
+   "execution_count": 8,
+   "id": "d4fc7a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ed65aa52-7d2c-434e-b317-e3619bc82a97",
+   "execution_count": 9,
+   "id": "ceaa922c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45158cda",
+   "id": "cc8fd73a",
    "metadata": {},
    "source": [
     "## Training"
@@ -274,15 +267,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d2ab890",
+   "id": "19a62141",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0/1] || Step: [0/1563] || Average Training Loss: 8.1363\n",
-      "Epoch: [0/1] || Step: [500/1563] || Average Training Loss: 3.7902\n"
+      "Epoch: [0/50]          || Step: [0/1563]        || Average Training Loss: 7.6567\n",
+      "Epoch: [0/50]          || Step: [100/1563]      || Average Training Loss: 3.8458\n",
+      "Epoch: [0/50]          || Step: [200/1563]      || Average Training Loss: 3.4217\n",
+      "Epoch: [0/50]          || Step: [300/1563]      || Average Training Loss: 3.2068\n",
+      "Epoch: [0/50]          || Step: [400/1563]      || Average Training Loss: 3.0728\n",
+      "Epoch: [0/50]          || Step: [500/1563]      || Average Training Loss: 2.9856\n"
      ]
     }
    ],
@@ -306,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ec0a2c2-8bf7-4a91-9ebb-ffe9601c1ef4",
+   "id": "90bf9e0a",
    "metadata": {},
    "source": [
     "## Try with different hyperparamters"
@@ -315,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31c88d1-e10a-4b3b-a017-a28e227d509d",
+   "id": "906a057e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3017d8de",
+   "id": "01a5f807",
    "metadata": {},
    "outputs": [
     {
@@ -346,11 +343,11 @@
      "evalue": "[Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [15]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m model_params \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m      2\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpath\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m../model/model_v2/model_v2_1_param.json\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      3\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mbatch_size\u001B[39m\u001B[38;5;124m'\u001B[39m: BATCH_SIZE,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mvocab_size\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;28mlen\u001B[39m(train_dataset\u001B[38;5;241m.\u001B[39mvocab\u001B[38;5;241m.\u001B[39midx2word)\n\u001B[1;32m      8\u001B[0m }\n\u001B[0;32m---> 10\u001B[0m \u001B[43msave_params\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mmodel_params\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/INM706-image-captioning/code/utils.py:248\u001B[0m, in \u001B[0;36msave_params\u001B[0;34m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size)\u001B[0m\n\u001B[1;32m    240\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21msave_params\u001B[39m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size):\n\u001B[1;32m    241\u001B[0m     params \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m    242\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mbatch_size\u001B[39m\u001B[38;5;124m'\u001B[39m: batch_size,\n\u001B[1;32m    243\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124membed_size\u001B[39m\u001B[38;5;124m'\u001B[39m: embed_size,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    246\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mvocab_size\u001B[39m\u001B[38;5;124m'\u001B[39m: vocab_size\n\u001B[1;32m    247\u001B[0m     }\n\u001B[0;32m--> 248\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mw\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m outfile:\n\u001B[1;32m    249\u001B[0m         json\u001B[38;5;241m.\u001B[39mdump(params, outfile)\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m model_params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../model/model_v2/model_v2_1_param.json\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: BATCH_SIZE,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_size\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mlen\u001b[39m(train_dataset\u001b[38;5;241m.\u001b[39mvocab\u001b[38;5;241m.\u001b[39midx2word)\n\u001b[1;32m      8\u001b[0m }\n\u001b[0;32m---> 10\u001b[0m \u001b[43msave_params\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmodel_params\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/INM706-image-captioning/code/utils.py:248\u001b[0m, in \u001b[0;36msave_params\u001b[0;34m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size)\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_params\u001b[39m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size):\n\u001b[1;32m    241\u001b[0m     params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    242\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: batch_size,\n\u001b[1;32m    243\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124membed_size\u001b[39m\u001b[38;5;124m'\u001b[39m: embed_size,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_size\u001b[39m\u001b[38;5;124m'\u001b[39m: vocab_size\n\u001b[1;32m    247\u001b[0m     }\n\u001b[0;32m--> 248\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m outfile:\n\u001b[1;32m    249\u001b[0m         json\u001b[38;5;241m.\u001b[39mdump(params, outfile)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'"
      ]
     }
    ],
@@ -370,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef67378d-6e62-4b7c-9557-ea91b2f06802",
+   "id": "4a086978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e18e938c-e9cc-47bd-9290-343304a18e7e",
+   "id": "e07a2af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03d3cbe-6ae1-4619-98ac-a3f15e3f7984",
+   "id": "296dccb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbaa16cd-fa96-4164-923f-8fedfc4c78d5",
+   "id": "9f176d10",
    "metadata": {},
    "outputs": [],
    "source": []
